--- a/shops.html
+++ b/shops.html
@@ -121,11 +121,11 @@
                         
                         <!-- Shop 1: GME Collection -->
                         <div class="flex-shrink-0 w-full md:w-1/2 lg:w-1/3 rounded-xl overflow-hidden shadow-md hover:shadow-xl transition duration-300 border border-primary-green/20" style="scroll-snap-align: start;">
-                            <img src="assets/images/kedai.jpeg" alt="GME Collection" class="w-full h-48 object-cover" onerror="this.src='https://placehold.co/600x400/047857/ffffff?text=GME'">
+                            <img src="assets/images/gme_collection.jpeg" alt="GME Collection" class="w-full h-48 object-cover" onerror="this.src='https://placehold.co/600x400/047857/ffffff?text=GME'">
                             <div class="p-4">
                                 <h3 class="text-xl font-semibold text-primary-green mb-2">GME Collection</h3>
                                 <p class="text-sm text-gray-600 mb-3">
-                                    Your go-to stop for everyday essentials, local snacks, and travel necessities in the heart of Long Bedian.
+                                    Specializing in traditional modern hats (topi moden) and beautifully handcrafted bags. Discover authentic Kayan accessories that blend traditional craftsmanship with contemporary style.
                                 </p>
                                 <p class="text-xs text-gray-500 leading-relaxed">
                                     <strong>Address:</strong> Long Bedian, LB156, Apoh, 98050 Baram, Sarawak<br>
@@ -135,29 +135,13 @@
                             </div>
                         </div>
 
-                        <!-- Shop 2: L&L Panak Enterprise -->
+                        <!-- Shop 2: LAHAI Handicraft -->
                         <div class="flex-shrink-0 w-full md:w-1/2 lg:w-1/3 rounded-xl overflow-hidden shadow-md hover:shadow-xl transition duration-300 border border-primary-green/20" style="scroll-snap-align: start;">
-                            <img src="assets/images/kedai.jpeg" alt="L&L Panak Enterprise" class="w-full h-48 object-cover" onerror="this.src='https://placehold.co/600x400/0EA5E9/ffffff?text=L%26L'">
-                            <div class="p-4">
-                                <h3 class="text-xl font-semibold text-primary-green mb-2">L&L Panak Enterprise</h3>
-                                <p class="text-sm text-gray-600 mb-3">
-                                    Friendly neighbourhood shop offering a curated mix of dry goods, beverages, and household staples for villagers and travellers alike.
-                                </p>
-                                <p class="text-xs text-gray-500 leading-relaxed">
-                                    <strong>Address:</strong> Long Bedian, Apoh, Baram, Sarawak<br>
-                                    <strong>Hours:</strong> 8.00 AM – 7.30 PM<br>
-                                    <strong>Phone:</strong> 011-1050 2528
-                                </p>
-                            </div>
-                        </div>
-
-                        <!-- Shop 3: LAHAI Handicraft -->
-                        <div class="flex-shrink-0 w-full md:w-1/2 lg:w-1/3 rounded-xl overflow-hidden shadow-md hover:shadow-xl transition duration-300 border border-primary-green/20" style="scroll-snap-align: start;">
-                            <img src="assets/images/crafts.jpg" alt="LAHAI Handicraft" class="w-full h-48 object-cover" onerror="this.src='https://placehold.co/600x400/F97316/ffffff?text=LAHAI'">
+                            <img src="assets/images/lahai_handicraft.jpeg" alt="LAHAI Handicraft" class="w-full h-48 object-cover" onerror="this.src='https://placehold.co/600x400/F97316/ffffff?text=LAHAI'">
                             <div class="p-4">
                                 <h3 class="text-xl font-semibold text-primary-green mb-2">LAHAI Handicraft</h3>
                                 <p class="text-sm text-gray-600 mb-3">
-                                    Showcasing exquisite beadwork, woven crafts, and handmade gifts crafted by Long Bedian artisans—perfect keepsakes of your journey.
+                                    Master artisans creating exquisite handcrafted bags using traditional rattan (rotan) weaving techniques. Each piece showcases the skill and heritage of Long Bedian's craft traditions.
                                 </p>
                                 <p class="text-xs text-gray-500 leading-relaxed">
                                     <strong>Address:</strong> Long Bedian, Apoh, Baram, Sarawak<br>
@@ -167,18 +151,50 @@
                             </div>
                         </div>
 
-                        <!-- Shop 4: SAYULAN Enterprise -->
+                        <!-- Shop 3: SAYULAN Enterprise -->
                         <div class="flex-shrink-0 w-full md:w-1/2 lg:w-1/3 rounded-xl overflow-hidden shadow-md hover:shadow-xl transition duration-300 border border-primary-green/20" style="scroll-snap-align: start;">
                             <img src="assets/images/kedai.jpeg" alt="SAYULAN Enterprise" class="w-full h-48 object-cover" onerror="this.src='https://placehold.co/600x400/22C55E/ffffff?text=SAYU'">
                             <div class="p-4">
                                 <h3 class="text-xl font-semibold text-primary-green mb-2">SAYULAN Enterprise</h3>
                                 <p class="text-sm text-gray-600 mb-3">
-                                    A lively general store in Pekan Long Bedian supplying fresh produce, packaged goods, and daily essentials for the community.
+                                    A well-stocked grocery store (kedai runcit) offering a comprehensive selection of daily necessities, household items, and essential goods for the Long Bedian community.
                                 </p>
                                 <p class="text-xs text-gray-500 leading-relaxed">
                                     <strong>Address:</strong> Pekan Long Bedian, Long Bedian, 98050 Baram, Sarawak<br>
                                     <strong>Hours:</strong> 8.00 AM – 7.30 PM<br>
                                     <strong>Phone:</strong> 019-887 9917
+                                </p>
+                            </div>
+                        </div>
+
+                        <!-- Shop 4: Apoh Trading -->
+                        <div class="flex-shrink-0 w-full md:w-1/2 lg:w-1/3 rounded-xl overflow-hidden shadow-md hover:shadow-xl transition duration-300 border border-primary-green/20" style="scroll-snap-align: start;">
+                            <img src="assets/images/apoh_trading_2.jpeg" alt="Apoh Trading" class="w-full h-48 object-cover" onerror="this.src='https://placehold.co/600x400/8B5CF6/ffffff?text=Apoh'">
+                            <div class="p-4">
+                                <h3 class="text-xl font-semibold text-primary-green mb-2">Apoh Trading</h3>
+                                <p class="text-sm text-gray-600 mb-3">
+                                    Your premier destination for authentic Long Bedian souvenirs. Featuring locally crafted mementos, traditional items, and unique keepsakes that celebrate the rich culture and heritage of the region.
+                                </p>
+                                <p class="text-xs text-gray-500 leading-relaxed">
+                                    <strong>Address:</strong> Long Bedian, Apoh, Baram, Sarawak<br>
+                                    <strong>Hours:</strong> 8.00 AM – 7.30 PM<br>
+                                    <strong>Phone:</strong> Contact for details
+                                </p>
+                            </div>
+                        </div>
+
+                        <!-- Shop 5: Inei Soon -->
+                        <div class="flex-shrink-0 w-full md:w-1/2 lg:w-1/3 rounded-xl overflow-hidden shadow-md hover:shadow-xl transition duration-300 border border-primary-green/20" style="scroll-snap-align: start;">
+                            <img src="assets/images/inei_soon.jpeg" alt="Inei Soon" class="w-full h-48 object-cover" onerror="this.src='https://placehold.co/600x400/EC4899/ffffff?text=Inei'">
+                            <div class="p-4">
+                                <h3 class="text-xl font-semibold text-primary-green mb-2">Inei Soon</h3>
+                                <p class="text-sm text-gray-600 mb-3">
+                                    Expert tailoring services specializing in batik clothing. Create custom batik garments tailored to your measurements, featuring traditional patterns and modern designs perfect for any occasion.
+                                </p>
+                                <p class="text-xs text-gray-500 leading-relaxed">
+                                    <strong>Address:</strong> Long Bedian, Apoh, Baram, Sarawak<br>
+                                    <strong>Hours:</strong> 8.00 AM – 7.30 PM<br>
+                                    <strong>Phone:</strong> Contact for details
                                 </p>
                             </div>
                         </div>
