--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@
                     <div class="p-8 bg-white rounded-xl shadow-lg border-t-4 border-secondary-gold">
                         <h3 class="text-2xl font-bold text-gray-700 mb-4">Village Office</h3>
                         <div class="space-y-3 text-gray-600">
-                            <p><strong>Address:</strong> Longhouse JKKK Office, Long Bedian, Baram District, Sarawak, Malaysia.</p>
+                            <p><strong>Address:</strong> Long Bedian Sub-District Office, Long Bedian, Baram District, Sarawak, Malaysia.</p>
                             <p><strong>Phone:</strong> +60 19 453 1703 (Bulan Wan) </p>
                         </div>
                     </div>
