update on title

--- a/about.html
+++ b/about.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Long Bedian, Sarawak - Our Story</title>
+
+    <title>About Long Bedian - Our Story and Cultural Heritage</title>
+    <meta name="description" content="Learn about the history and cultural significance of Long Bedian and the indigenous communities of Borneo.">
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Link to our external stylesheet -->
