--- a/explore.html
+++ b/explore.html
@@ -200,7 +200,7 @@
                 <div class="mt-4 border-t border-gray-700 pt-4">
                     <div class="flex items-center justify-center space-x-3">
                         <p class="text-sm text-gray-500">&copy; Initiative by YSS alumni.</p>
-                         <img src="assets/images/YSS logo.png" 
+                         <img src="assets/images/YSS Logo.png" 
                             alt="Long Bedian Logo" 
                             class="h-6 w-15"
                             onerror="this.src='https://placehold.co/100x100/047857/ffffff?text=LB'">
